10.2.1: [UI/Styles] Minor dark mode fixes.

--- a/features/cerberusweb.core/resources/css/cerb.css
+++ b/features/cerberusweb.core/resources/css/cerb.css
@@ -2348,7 +2348,7 @@ UL.ui-menu li.ui-state-focus {
   border-radius: 12px 12px 12px 0;
 }
 .bot-chat-window > div.bot-chat-window-convo div.bot-chat-message.bot-chat-right > div.bot-chat-message-bubble {
-  color: var(--cerb-color-text-inverse);
+  color: var(--cerb-color-action-primary-text);
   background-color: var(--cerb-color-action-primary);
   border: 0;
   border-radius: 12px 12px 0 12px;
@@ -2374,7 +2374,7 @@ UL.ui-menu li.ui-state-focus {
 }
 .bot-chat-window BUTTON.bot-chat-button {
   height: inherit;
-  color: var(--cerb-color-text-inverse);
+  color: var(--cerb-color-action-primary-text);
   padding: 5px;
   width: 100%;
   font-size: 1.5em;
